staticfiles/css/style.css
/* Background-colors */
body, #schedule, #read, #write, #message, .edit-schedule-input{
	background-color: #EEEEFF; /* White */
}

header, footer,
.account-container > div,
.btn, .text-bubble, .first-row{
	background-color: #5AAEFF; /* Blue */
}

#edit-schedule, .btn-auth, .first-col-primary{
	background-color: #FFAB5A; /* Orange */
}

.first-col-secondary{
	background-color: #FFC093; /* Light Orange */
}

/* Text Colors */
p, h1, h2, #log-out, .account-container a, .btn, .text-bubble{
	color: #EEEEFF; /* White */
}

.message-date, .message-sender{
	color: #EEEEFFAA; /* Transparent white */
}

.shift-text{
	color: #000000;	/* Black */
}

#shift-error{
	color: red;
}
/* Fonts */

h1, p, button, label, input, select{
	font-family: "Lexend Giga", serif;
}

/* General__________________________________________________ */

label{
	margin: 3px 1px;
}

.btn{
	margin: 10px;

	border-radius: 20px;
}

/* Sections_________________________________________________ */
/* Header */
header{
	min-height: 10vh;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

h1{
	margin: 0;

	font-size: 1.7rem;

	padding: 5px;
}

#log-out{
	width: 120px;
}

/* Main */
main{
	min-height: 84vh;
}

/* Footer */
footer{
	min-height: 6vh;

	padding: 10px;
}

#loged-in-user{
	margin: 0;
	box-sizing: unset !important;

	text-align: end;
}
#loged-in-user > span{
	font-style: italic;
}

/* Home page */
/* Schedule div */


#schedule{
	padding:45px 0 15px;
}

#schedule-buttons{
	display: flex;
 	justify-content: space-around;
}

#schedule-container{
	justify-self: auto;
	margin: 0;
	padding: 0;
	width: auto;
}

.row{
	--bs-gutter-x: 0;
}

#schedule-container > .row{
	width: 100vw;
}

#schedule-container > .row > .col{
	border: 1px solid black;
  
  height: 40px;
	width: 12.5vw;

	text-align: center;
	padding: 6px;
}

.first-row{
	height: 60px !important;

	padding-top: 1rem !important;
}

.first-col{
	border-top: 0;
}

.last-col{
	border-bottom: 0;
}

.schedule-text, .shift-text{
  font-size: 0.4rem;
}

#schedule-buttons{
	margin-top: 15px;
}

/* Edit-schedule div */
#scheduleForm{
	display: flex;
	flex-direction: column;
}

#schedule-form-div{
	margin:15px;

	display: flex;
	flex-direction: column;
	align-items: center;
}

#schedule-form-div > div{
	margin: 5px;

  width: 50%;

  display: flex;
  justify-content: space-between;
}

#shift-error{
	visibility: hidden;
}

#submit-schedule-div{
	display: flex;
	justify-content: center;
}

#quick-options{
	place-self: center;
  margin: 15px;

	width: 50%;

	display: flex;
	justify-content: space-between;
}

#submit-schedule-div > submit{
	width: 100vw;
}

#submit-schedule-div > submit{
	width:6vw;
}

/* Chat div */

#chat{
	border-top: 2px solid gray;
		
	width: 100%;
}

#read{
	overflow-y: auto;
	overflow-x: hidden;
	border-radius: 10px 10px 0 0;

	height: 80vh;

	padding: 10px;
	scrollbar-width: none;
  -ms-overflow-style: none;
}

.text-bubble{
	margin: 1px 4px;

	display: inline-block;
	border-radius: 10px;

	padding: 6px;
}

.text-bubble > p{
	margin: 0px;
	padding: 0px;
}

.message-date{
	font-size: .7rem;
}

#write-message-div{
	width: 100%;

	position: relative;
	display: inline-block;
}


#message{
	border-radius: 0 0 10px 10px;
	border-width: 2px 0 0 0;

	height: 100px;
	width: 100%;
	resize: none;
}

#send-message{
	position: absolute;
	bottom: 10px;
	right: 10px;
}

/* Authentication pages */

.account-container {
  width: 100%;

  padding: 4rem;
}

.account-container > div{
	border-radius: 15px;
}

.account-container h3{
	margin-top:30px;
}

.auth_form{
	margin:40px 0;
}

.edit-schedule-input{
	border-radius: 5px;
}

.auth_form > p{
	margin-bottom: 20px;

	display: flex;
	justify-content: space-between;
}

#id_remember{
	width: 25px;
}

.auth_form > p > input{
	width: 65%;
}

.auth_form input{
	border-radius: 8px;
}

.auth_form > ul, .helptext{
    display: none;
}

	/* Login page */
#login-form-div{
	display: flex;
}

	/* Logout page */
#log-out-confirmation{
	margin-top:40px;
}

#log-out-buttons{
	display: flex;
}

#log-out-buttons > a{
	width: 0;
}

#log-out-buttons button{
	width: 120px;
}

/* Media query for 600px wide phones and biggers______________________________________________  */
@media screen and (min-width: 600px){

	h1{
		font-size: 1.9rem;
	}

	.schedule-text, .shift-text {
  	font-size: 0.55rem;
	}

}

/* Media query for tablets and bigger______________________________________________  */
@media screen and (min-width: 768px){

	h1{
		font-size: 2.125rem;
	}

	.schedule-text, .shift-text {
  	font-size: .75rem;
	}

	#schedule-container > .row > .col {
  height: 50px;
  }
}

/* Media query for pcs and bigger______________________________________________ */
@media screen and (min-width: 1024px){
	/* Background-Colors*/
	#edit-schedule, #chat{
		background-color: #FFAB5A;
	}

/* Sections_________________________________________________ */
	/* Header */
	header{
		height: 10vh;
	}

	/* Main */
	main{
		display: flex;
	}

	/* Schedule div */
	#schedule{
		order: 1;

		width: 60vw;
		min-height: 85vh;
	}

	#schedule-container{
		padding: 30px;
	}

	#schedule-container > .row{
		width: 56vw;
	}

	#schedule-container > .row > .col{
		width: 6vw;
		height: 40px;
	}

	.schedule-text, .shift-text {
    font-size: .65rem;
  }

	/* Edit-schedule div */
	#edit-schedule{
		order: 0;

		width: 20vw;
		height: auto;

		display: flex;
		align-items: center;
	}

	#edit-schedule-form > div {
	  width: 14vw;
	}

	#schedule-form-div > div {
		width: 100%;

		display: flex;
		flex-direction: column;
	}

	#shift-error{
		font-size: .5rem;
		margin-bottom: 1rem;
	}

	#name-error{
		font-size: 12px;
		color: red;
	}

	#quick-options{
		place-self: auto;
	
		width: 80%;
	}

	.long-input{
		width: 14vw;
	}

	.shift-div{
		display: flex;
		justify-content: space-between;
	}

	.shift{
		width: 6vw;
	}

	.first-col{
		border-top: 1px solid black;
	}

	.last-col{
		border-bottom: 1px solid black;
	}

	/* Chat div */
	#chat{
		order: 2;
		margin: 0;

		width: 20vw;
		height: auto;
	}

	#read-and-write{
		margin: 2vh 15px;	
	}

	#read{
		height: 56vh;
	}

	#write{
		height: 10vh;
	}

	#send-message-div{
		margin: 2vh 15px;

		display:flex;
		justify-content: right;
	}
/* Authentication pages */
	.account-container{
		height: 84vh;

		display: flex;
		justify-content: center;
		align-items: center;
	}
	
	.account-container > div{
		height: 80%;
		width: 40%;

		border-radius: 15px;
	}

}

/* Media query for large screens______________________________________________ */
@media screen and (min-width: 1680px){
	
	.schedule-text, .shift-text {
  	font-size: .8rem;
	}

	#schedule-container > .row > .col {
  	height: 55px;
  }
}

